# agent-browser

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
core/: Cargo.toml
core/examples/: basic.rs  configuration.rs  download.rs  forms.rs  iframe.rs  screenshot.rs
core/src/: actions.rs  browser.rs  error.rs  lib.rs  snapshot.rs  types.rs
core/tests/: browser_e2e.rs
docs/: README.md  README_CN.md  api-reference.md  api-reference_CN.md  architecture.md  architecture_CN.md  configuration.md  configuration_CN.md  examples.md  examples_CN.md  getting-started.md  getting-started_CN.md
http/: Cargo.toml
http/src/: main.rs
mcp/: Cargo.toml
mcp/src/: main.rs  protocol.rs  tools.rs
mcp/src/transport/: http.rs  mod.rs  sse.rs  stdio.rs
