[package]
name = "agent-browser-http"
description = "HTTP API server for browser automation - RESTful API for any HTTP client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[[bin]]
name = "agent-browser-http"
path = "src/main.rs"

[dependencies]
agent-browser-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
uuid.workspace = true

# HTTP
axum.workspace = true
